--- a/api/static/web/v1/manifest.json
+++ b/api/static/web/v1/manifest.json
@@ -4,7 +4,7 @@
 "id":"astroSS1.my",
 "name":"ASTRO PREMIER LEAGUE",
 "categories":["SPORTS"],
-"url":"918986&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918986&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/g0g6p61731234018.png",
 "country":"MY"
 }, 
@@ -13,7 +13,7 @@
 "id":"astroSS2.my",
 "name":"ASTRO PREMIER LEAGUE 2",
 "categories":["SPORTS"],
-"url":"918985&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918985&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/bk9vbh1731234210.png",
 "country":"MY"
 }, 
@@ -22,7 +22,7 @@
 "id":"astroSS3.my",
 "name":"ASTRO GRANDSTAND",
 "categories":["SPORTS"],
-"url":"918984&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918984&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/mwtc9p1731234887.png",
 "country":"MY"
 },
@@ -31,7 +31,7 @@
 "id":"astroSS4.my",
 "name":"ASTRO FOOTBALL",
 "categories":["SPORTS"],
-"url":"918983&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918983&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/necgva1731235994.png",
 "country":"MY"
 },
@@ -40,7 +40,7 @@
 "id":"hubpremS1.sg",
 "name":"HUB PREMIER 1",
 "categories":["SPORTS"],
-"url":"1032529&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032529&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/qoerty1659622111.png",
 "country":"SG"
 },
@@ -49,7 +49,7 @@
 "id":"hubpremS2.sg",
 "name":"HUB PREMIER 2",
 "categories":["SPORTS"],
-"url":"1032528&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032528&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/sdvs4u1659622094.png",
 "country":"SG"
 },
@@ -58,7 +58,7 @@
 "id":"hubpremS3.sg",
 "name":"HUB PREMIER 3",
 "categories":["SPORTS"],
-"url":"1032527&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032527&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/znzwou1659622086.png",
 "country":"SG"
 },
@@ -67,7 +67,7 @@
 "id":"hubpremS4.sg",
 "name":"HUB PREMIER 4",
 "categories":["SPORTS"],
-"url":"1032526&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032526&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/emwu7x1659622075.png",
 "country":"SG"
 },
@@ -76,7 +76,7 @@
 "id":"hubSports1.sg",
 "name":"HUB SPORTS 1",
 "categories":["SPORTS"],
-"url":"1110667&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1110667&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/uan17t1655810451.png",
 "country":"SG"
 },
@@ -85,7 +85,7 @@
 "id":"hubSports2.sg",
 "name":"HUB SPORTS 2",
 "categories":["SPORTS"],
-"url":"1110666&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1110666&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/m85hz61655810471.png",
 "country":"SG"
 },
@@ -94,7 +94,7 @@
 "id":"hubSports3.sg",
 "name":"HUB SPORTS 1",
 "categories":["SPORTS"],
-"url":"1110665&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1110665&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/tmpwbb1655810489.png",
 "country":"SG"
 },
@@ -103,7 +103,7 @@
 "id":"starS1.in",
 "name":"STARSPORTS",
 "categories":["SPORTS"],
-"url":"1104673&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1104673&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/xkekt61643389138.png",
 "country":"IN"
 },
@@ -112,7 +112,7 @@
 "id":"starS2.in",
 "name":"STARSPORTS 2",
 "categories":["SPORTS"],
-"url":"1104674&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1104674&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/86n1ir1643389161.png",
 "country":"IN"
 },
@@ -121,7 +121,7 @@
 "id":"starS3.in",
 "name":"STARSPORTS 3",
 "categories":["SPORTS"],
-"url":"1104675&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1104675&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/vo30va1643389174.png",
 "country":"IN"
 },
@@ -130,7 +130,7 @@
 "id":"starSS1.in",
 "name":"STARSPORTS SELECT 1",
 "categories":["SPORTS"],
-"url":"1114583&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1114583&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/z7uvs71643386857.png",
 "country":"IN"
 }, 
@@ -139,7 +139,7 @@
 "id":"starSS2.in",
 "name":"STARSPORTS SELECT 2",
 "categories":["SPORTS"],
-"url":"1114584&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1114584&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/wejp5b1643386884.png",
 "country":"IN"
 },
@@ -148,7 +148,7 @@
 "id":"usaNetEast.us",
 "name":"USA NETWORK EAST",
 "categories":["SPORTS"],
-"url":"188997&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=188997&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/yswxwr1433432126.png",
 "country":"US"
 },
@@ -157,7 +157,7 @@
 "id":"usaNetWest.us",
 "name":"USA NETWORK WEST",
 "categories":["SPORTS"],
-"url":"191882&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=191882&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/yswxwr1433432126.png",
 "country":"US"
 }
