--- a/api/static/web/v1/manifest.json
+++ b/api/static/web/v1/manifest.json
@@ -238,7 +238,7 @@
 "id":"nowS1.hk",
 "name":"NOWSPORTS",
 "categories":["SPORTS"],
-"url":"http://onlytimewilltell.xyz:2086/images/76795ef4ce7c79ee1889165bad983176.png",
+"url":"http://mains.services/live/bshorty/Zv5le07a0J/82910fbe-545f-46aa-9087-4fb36c3faf17.ts",
 "logo":"https://i.imgur.com/3BbhTQX.png",
 "country":"HK"
 },
