--- a/api/static/web/v1/manifest.json
+++ b/api/static/web/v1/manifest.json
@@ -301,7 +301,7 @@
 "id":"astroSS1.my",
 "name":"ASTRO PREMIER LEAGUE",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918986&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=918986&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/g0g6p61731234018.png",
 "country":"MY"
 }, 
@@ -310,7 +310,7 @@
 "id":"astroSS2.my",
 "name":"ASTRO PREMIER LEAGUE 2",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918985&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=918985&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/bk9vbh1731234210.png",
 "country":"MY"
 }, 
@@ -319,7 +319,7 @@
 "id":"astroSS3.my",
 "name":"ASTRO GRANDSTAND",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918984&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=918984&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/mwtc9p1731234887.png",
 "country":"MY"
 },
@@ -328,7 +328,7 @@
 "id":"astroSS4.my",
 "name":"ASTRO FOOTBALL",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=918983&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=918983&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/necgva1731235994.png",
 "country":"MY"
 },
@@ -337,7 +337,7 @@
 "id":"hubpremS1.sg",
 "name":"HUB PREMIER 1",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032529&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1032529&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/qoerty1659622111.png",
 "country":"SG"
 },
@@ -346,7 +346,7 @@
 "id":"hubpremS2.sg",
 "name":"HUB PREMIER 2",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032528&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1032528&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/sdvs4u1659622094.png",
 "country":"SG"
 },
@@ -355,7 +355,7 @@
 "id":"hubpremS3.sg",
 "name":"HUB PREMIER 3",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032527&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1032527&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/znzwou1659622086.png",
 "country":"SG"
 },
@@ -364,7 +364,7 @@
 "id":"hubpremS4.sg",
 "name":"HUB PREMIER 4",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1032526&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1032526&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/emwu7x1659622075.png",
 "country":"SG"
 },
@@ -373,7 +373,7 @@
 "id":"hubSports1.sg",
 "name":"HUB SPORTS 1",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1110667&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1110667&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/uan17t1655810451.png",
 "country":"SG"
 },
@@ -382,7 +382,7 @@
 "id":"hubSports2.sg",
 "name":"HUB SPORTS 2",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1110666&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1110666&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/m85hz61655810471.png",
 "country":"SG"
 },
@@ -391,7 +391,7 @@
 "id":"hubSports3.sg",
 "name":"HUB SPORTS 3",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1110665&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1110665&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/tmpwbb1655810489.png",
 "country":"SG"
 },
@@ -400,7 +400,7 @@
 "id":"starS1.in",
 "name":"STARSPORTS",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1104673&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1104673&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/xkekt61643389138.png",
 "country":"IN"
 },
@@ -409,7 +409,7 @@
 "id":"starS2.in",
 "name":"STARSPORTS 2",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1104674&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1104674&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/86n1ir1643389161.png",
 "country":"IN"
 },
@@ -418,7 +418,7 @@
 "id":"starS3.in",
 "name":"STARSPORTS 3",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1104675&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1104675&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/vo30va1643389174.png",
 "country":"IN"
 },
@@ -427,7 +427,7 @@
 "id":"starSS1.in",
 "name":"STARSPORTS SELECT 1",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1114583&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1114583&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/z7uvs71643386857.png",
 "country":"IN"
 }, 
@@ -436,7 +436,7 @@
 "id":"starSS2.in",
 "name":"STARSPORTS SELECT 2",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=1114584&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=1114584&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/wejp5b1643386884.png",
 "country":"IN"
 },
@@ -454,7 +454,7 @@
 "id":"usaNetWest.us",
 "name":"USA NETWORK WEST",
 "categories":["SPORTS"],
-"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:B5:46:30&stream=191882&extension=ts",
+"url":"http://nk.cdnnet.xyz:80/play/live.php?mac=00:1A:79:AD:B9:16&stream=191882&extension=ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/yswxwr1433432126.png",
 "country":"US"
 }
