--- a/api/static/web/v1/manifest.json
+++ b/api/static/web/v1/manifest.json
@@ -157,7 +157,7 @@
 "id":"skyS1.nz",
 "name":"SKYSPORTS",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/3a3f7ae8-8967-4580-b030-4a66fea7167b.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/3a3f7ae8-8967-4580-b030-4a66fea7167b.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_1_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -166,7 +166,7 @@
 "id":"skyS2.nz",
 "name":"SKYSPORTS 2",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/6048d24e-681a-41ce-b7f6-0ed78c7d5f55.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/6048d24e-681a-41ce-b7f6-0ed78c7d5f55.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_2_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -175,7 +175,7 @@
 "id":"skyS3.nz",
 "name":"SKYSPORTS 3",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/6439eff4-b6a6-4d9b-abd0-9b4ea844439b.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/6439eff4-b6a6-4d9b-abd0-9b4ea844439b.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_3_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -184,7 +184,7 @@
 "id":"skyS4.nz",
 "name":"SKYSPORTS 4",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/03e6b7c2-32ff-4d7d-90a1-798a35905074.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/03e6b7c2-32ff-4d7d-90a1-798a35905074.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_4_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -193,7 +193,7 @@
 "id":"skyS5.nz",
 "name":"SKYSPORTS 5",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/f625580c-d706-491f-907b-2baad2c4117e.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/f625580c-d706-491f-907b-2baad2c4117e.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_5_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -202,7 +202,7 @@
 "id":"skyS6.nz",
 "name":"SKYSPORTS 6",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/9f04c0ed-39d9-446a-bc2a-c24d953adcab.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/9f04c0ed-39d9-446a-bc2a-c24d953adcab.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_6_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -211,7 +211,7 @@
 "id":"skyS7.nz",
 "name":"SKYSPORTS 7",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/3e68d3de-5e71-41e0-9781-0cf763002a8c.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/3e68d3de-5e71-41e0-9781-0cf763002a8c.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_7_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -220,7 +220,7 @@
 "id":"skyS8.nz",
 "name":"SKYSPORTS PREMIER LEAGUE",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/7e851290-f8c3-4259-8ace-e45b71ed26ab.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/7e851290-f8c3-4259-8ace-e45b71ed26ab.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/Sky_Sport_Premier_League_Channel_Logo.png",
 "country":"NZ"
 },
@@ -229,7 +229,7 @@
 "id":"skyS9.nz",
 "name":"SKYSPORTS 9",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/45531087-726e-49cc-a815-9ccbdd8cb59d.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/45531087-726e-49cc-a815-9ccbdd8cb59d.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_9_logo_stack_rgb.png",
 "country":"NZ"
 },
@@ -238,7 +238,7 @@
 "id":"skySSlc.nz",
 "name":"SKYSPORTS SELECT",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/703b63c9-b5fd-446e-a221-5f87f5ab48ec.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/703b63c9-b5fd-446e-a221-5f87f5ab48ec.ts",
 "logo":"https://static.sky.co.nz/sky/channel-logos/051_sky_sport_news.png",
 "country":"NZ"
 },
@@ -247,7 +247,7 @@
 "id":"tntS1.uk",
 "name":"TNT SPORTS",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/6c5b4010-afa9-4e64-921b-263217b936da.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/6c5b4010-afa9-4e64-921b-263217b936da.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/153ikz1689746051.png",
 "country":"UK"
 },
@@ -256,7 +256,7 @@
 "id":"tntS2.uk",
 "name":"TNT SPORTS 2",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/b99d4063-9cbf-46cc-a6ac-86601b3a17b1.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/b99d4063-9cbf-46cc-a6ac-86601b3a17b1.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/lzqo991689746090.png",
 "country":"UK"
 },
@@ -265,7 +265,7 @@
 "id":"tntS3.uk",
 "name":"TNT SPORTS 3",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/3487f1f4-771e-4c8c-aa7c-80945800c7d9.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/3487f1f4-771e-4c8c-aa7c-80945800c7d9.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/iwotea1701768457.png",
 "country":"UK"
 },
@@ -274,7 +274,7 @@
 "id":"tntS4.uk",
 "name":"TNT SPORTS 4",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/26a00017-1496-468f-8693-93df9e1b846f.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/26a00017-1496-468f-8693-93df9e1b846f.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/81twnr1689746183.png",
 "country":"UK"
 },
@@ -283,7 +283,7 @@
 "id":"skysp0rtsME.uk",
 "name":"SKYSPORTS MAIN EVENT",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/58c0e1ee-ae2e-4694-bb66-3e3eb6c57634.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/58c0e1ee-ae2e-4694-bb66-3e3eb6c57634.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/mp44981502554837.png",
 "country":"UK"
 },
@@ -292,7 +292,7 @@
 "id":"skysp0rtsPL.uk",
 "name":"SKYSPORTS PREMIER LEAGUE",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/c303e484-7208-4695-a34e-c962db644a86.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/c303e484-7208-4695-a34e-c962db644a86.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/7e2lv21502554825.png",
 "country":"UK"
 },
@@ -301,7 +301,7 @@
 "id":"skysp0rtsFB.uk",
 "name":"SKYSPORTS FOOTBALL",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/607a00ed-5cf2-45f6-9e37-1e352fe4ef20.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/607a00ed-5cf2-45f6-9e37-1e352fe4ef20.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/lnd1p01502554851.png",
 "country":"UK"
 },
@@ -310,7 +310,7 @@
 "id":"skysp0rtsUNO.it",
 "name":"SKYSPORTS UNO",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/ec6efe14-0b62-48d1-afa7-eca4f9770c16.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/ec6efe14-0b62-48d1-afa7-eca4f9770c16.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/Sky_Sport_Uno.png",
 "country":"IT"
 },
@@ -319,7 +319,7 @@
 "id":"skysp0rtsCC.it",
 "name":"SKYSPORTS CALCIO",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/d41ab134-6dd8-4026-b0ef-27e8391fc46e.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/d41ab134-6dd8-4026-b0ef-27e8391fc46e.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/tiny/70ud6o1656963115.png",
 "country":"IT"
 },
@@ -328,7 +328,7 @@
 "id":"nowS1PL.hk",
 "name":"NOWSPORTS PREMIER LEAGUE",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/e9301034-7ab8-4915-86f2-9e092bb06134.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/e9301034-7ab8-4915-86f2-9e092bb06134.ts",
 "logo":"https://i.imgur.com/l2dzMGa.png",
 "country":"HK"
 },
@@ -337,7 +337,7 @@
 "id":"nowS2PL.hk",
 "name":"NOWSPORTS PREMIER LEAGUE 2",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/41176be7-518a-4f04-a721-7d89161cf8fc.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/41176be7-518a-4f04-a721-7d89161cf8fc.ts",
 "logo":"https://i.imgur.com/yVCWN1c.png",
 "country":"HK"
 },
@@ -346,7 +346,7 @@
 "id":"nowS3PL.hk",
 "name":"NOWSPORTS PREMIER LEAGUE 3",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/cbceee38-4772-4b22-b2bb-797ce06177ed.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/cbceee38-4772-4b22-b2bb-797ce06177ed.ts",
 "logo":"https://i.imgur.com/oxakZgk.png",
 "country":"HK"
 },
@@ -355,7 +355,7 @@
 "id":"nowS4PL.hk",
 "name":"NOWSPORTS PREMIER LEAGUE 4",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/7367b8b8-f459-4be2-aee2-5e3f5e8d1f7e.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/7367b8b8-f459-4be2-aee2-5e3f5e8d1f7e.ts",
 "logo":"https://i.imgur.com/evqQoh9.png",
 "country":"HK"
 },
@@ -364,7 +364,7 @@
 "id":"nowS5PL.hk",
 "name":"NOWSPORTS PREMIER LEAGUE 5",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/5655f0f0-79f8-404d-a44c-128ef2e3c74d.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/5655f0f0-79f8-404d-a44c-128ef2e3c74d.ts",
 "logo":"https://i.imgur.com/eAsPUx2.png",
 "country":"HK"
 },
@@ -373,7 +373,7 @@
 "id":"nowS6PL.hk",
 "name":"NOWSPORTS PREMIER LEAGUE 6",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/93aa194a-e771-4070-9ee3-055230acc379.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/93aa194a-e771-4070-9ee3-055230acc379.ts",
 "logo":"https://i.imgur.com/q2GQzb9.png",
 "country":"HK"
 },
@@ -382,7 +382,7 @@
 "id":"nowS4k.hk",
 "name":"NOWSPORTS PREMIER LEAGUE TV",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/5153cfce-c89d-4937-901f-98bb480d35e5.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/5153cfce-c89d-4937-901f-98bb480d35e5.ts",
 "logo":"https://i.imgur.com/D0GgEQR.png",
 "country":"HK"
 },
@@ -391,7 +391,7 @@
 "id":"nowS1.hk",
 "name":"NOWSPORTS",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/82910fbe-545f-46aa-9087-4fb36c3faf17.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/82910fbe-545f-46aa-9087-4fb36c3faf17.ts",
 "logo":"https://i.imgur.com/3BbhTQX.png",
 "country":"HK"
 },
@@ -400,7 +400,7 @@
 "id":"nowS2.hk",
 "name":"NOWSPORTS 2",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/8408dc5b-6b47-420d-aea8-3663518fd9d5.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/8408dc5b-6b47-420d-aea8-3663518fd9d5.ts",
 "logo":"https://i.imgur.com/wkmjtNT.png",
 "country":"HK"
 },
@@ -409,7 +409,7 @@
 "id":"nowS3.hk",
 "name":"NOWSPORTS 3",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/e59bdd37-d1c4-45f9-b307-50f91968fa1a.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/e59bdd37-d1c4-45f9-b307-50f91968fa1a.ts",
 "logo":"https://i.imgur.com/kgo9uwH.png",
 "country":"HK"
 },
@@ -418,7 +418,7 @@
 "id":"nowS4.hk",
 "name":"NOWSPORTS 4",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/322241c0-e471-4ec9-82d1-2fb889181131.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/322241c0-e471-4ec9-82d1-2fb889181131.ts",
 "logo":"https://i.imgur.com/VzQp0ek.png",
 "country":"HK"
 },
@@ -427,7 +427,7 @@
 "id":"nowS5.hk",
 "name":"NOWSPORTS 5",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/c116e69d-aa7a-4256-8fdc-5f76c305556e.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/c116e69d-aa7a-4256-8fdc-5f76c305556e.ts",
 "logo":"https://i.imgur.com/qH25e4C.png",
 "country":"HK"
 },
@@ -436,7 +436,7 @@
 "id":"nowS6.hk",
 "name":"NOWSPORTS 6",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/68883709-7baf-47c8-9e3f-7f9977e63893.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/68883709-7baf-47c8-9e3f-7f9977e63893.ts",
 "logo":"https://i.imgur.com/oK9L6ni.png",
 "country":"HK"
 },
@@ -445,7 +445,7 @@
 "id":"nowS7.hk",
 "name":"NOWSPORTS 7",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/f36f7b89-f034-4923-b9b8-77d3764169f8.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/f36f7b89-f034-4923-b9b8-77d3764169f8.ts",
 "logo":"https://i.imgur.com/DySwf7S.png",
 "country":"HK"
 },
@@ -454,7 +454,7 @@
 "id":"usaNetEast.us",
 "name":"USA NETWORK EAST",
 "categories":["SPORTS"],
-"url":"http://mains.services/live/bshorty/Zv5le07a0J/3c446837-2d88-4a34-bcb9-7a2d026848a4.ts",
+"url":"http://mains.services/live/67564813/6Z@74..W/3c446837-2d88-4a34-bcb9-7a2d026848a4.ts",
 "logo":"https://r2.thesportsdb.com/images/media/channel/logo/yswxwr1433432126.png",
 "country":"US"
 }
